# krouzek_esp32

./: .gitignore  .gitmodules  platformio.ini
20191010_manager_tridy/: main.cpp
20191017_button_makra/: RBControl_button.cpp  RBControl_button.hpp  makra.cpp
20191024_expander/: main.cpp
20191031_digitalni_serva/: main.cpp
20191031_senzor_na_caru/: main.cpp
20191107_enkodery/: main.cpp
20191107_rs232/: uart_preruseni_fronta.cpp  uart_zaklad.cpp
20191114_cpp_templaty/: metody.cpp  tridy_byte_buffer.cpp  tridy_pole.cpp  tridy_vector.cpp
20191114_i2c/: master.cpp  slave.cpp
20191121_cpp_inheritance/: minecraft.cpp  writer.cpp
20191121_rbprotocol/: main.cpp
20191205_asynchttp/: .gitignore  genpage.py  platformio.ini
20191205_spi/: master.cpp  slave.cpp
20200109_kompilace/: .gitignore  build.sh  hlavicka.h
20200109_nvs_flash/: main.cpp
20200213_bluetooth/: ble_client.cpp  ble_server.cpp  bt_serial.cpp
20200305_lorris/: graf.cldta  main.cpp  packet.h  platformio.ini
20200305_vpython_pong/: krouzek.py  main.py
20201015_lorris_wifi_client/: graf.cldta  main.cpp  platformio.ini
20201015_lorris_wifi_server/: main.cpp  platformio.ini
20201112_docker/: Dockerfile  partitions.csv  platformio.ini
20201112_docker_compose/: docker-compose.yml
20201126_hall_sensor/: platformio.ini
20201126_ulp_koprocesor/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.defaults
20201209_cpp_kompilace/: zdrojak1.cpp  zdrojak2.cpp
20210107_exceptions/: exceptions.py  platformio.ini
20210107_raii/: platformio.ini
20210107_unit_tests/: platformio.ini
20210114_architektury_cpu/: build.sh  dis-aarch64-linux-gnu-.txt  dis-arm-linux-gnueabihf-.txt  dis-bin.txt  dis-ia64.txt  dis-xtensa-esp32-elf-.txt  main.c
20210114_test_deleni/: disassemble.sh  fw-O0.txt  fw-O2.txt  fw-O3.txt  fw-Os.txt  fw.txt  platformio.ini
20210203_iteratory/: .clang-format
20210211_cmake/: CMakeLists.txt  Config.h.in  hello.cpp
20210304_pc_app/: pc.cpp
20210304_pyqt/: main.py
20210318_qt_imgui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  portreader.cpp  portreader.h
20210415_utf8/: loctest  main_localetest.cpp  platformio.ini  py2.py  py_test.py  text-utf16.txt  text-utf8.txt
20210520_gridui_dev/: .gitignore  platformio.ini
20210527_mesh_idf/: CMakeLists.txt  platformio.ini  sdkconfig
20210527_mesh_painlessMesh/: platformio.ini
20210617_mqtt/: platformio.ini
20211012_jaculus_ts/: .babelrc.json  .gitignore  package-lock.json  package.json  transfer.py  tsconfig.json  webpack.config.js
20211214_python_sqlite/: main.py  transaction.py  transaction_context_manager.py
20220201_srf02_i2c/: main.cpp  srf02.cpp  srf02.hpp
20220301_gps6mv2/: platformio.ini
20220322_display_sdd1306/: platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32dev.old
20220322_display_st7789/: platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32dev.old
20220405_lvgl_displej/: platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32dev.old
20220405_lvgl_displej_cursor/: lvgl_mouse.cldta  sdkconfig.esp32dev  sdkconfig.esp32dev.old
20220419_lvgl_mpu6050/: platformio.ini  sdkconfig.esp32dev
20220426_gsm800l/: platformio.ini
20221213_rust_demo/esp32-std-test/: Cargo.toml  lorris_snake_rust.cldta
20221213_rust_demo/esp32-std-test/.cargo/: config.toml
20221213_rust_demo/esp32-std-test/src/: main.rs  timer.rs  uart_utils.rs
(+204 files in other folders)
