[package]
name = "esp32-std-test"
version = "0.1.0"
authors = ["Vojtech Bocek <vbocek@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-hal = "0.39.0"
esp-idf-sys = { version = "0.31.1", features = ["binstart"] }
getrandom = "0.2.8"


[build-dependencies]
embuild = "0.30.4"
